--- a/index2.css
+++ b/index2.css
@@ -48,7 +48,7 @@ font-size:130%;
 	left:0;
 	display:none;
 }
-.form {
+#form {
 		position: relative;
 		margin:4px auto;
 		z-index:2;
@@ -60,20 +60,25 @@ font-size:130%;
 		background:black;
 	}
 
-.form .input{
+#form .input{
 			width:96%;
-			padding:5% 0; 
-			margin-top:5%;
+			padding:5% 0;
 			border-radius:10px;
 		}
 
-.form #submitButton{
-margin-top:20%;
+#form #submitButton{
+margin-top:10%;
 margin-left:10%;	
 background:#d19f25;
+border-radius:10px;     
 width:80%;
 padding:7%; 
 font-size:100%;
 text-decoration: none;
+}
+#form h3{
+color:red;
+font-size:100%; 
+ margin-top:1%;   
 }
 /*form*/
