--- a/index2.css
+++ b/index2.css
@@ -9,41 +9,40 @@ display: block;
 position: fixed;
 list-style: none;
 height:30%;
-width:30%;
-left:-100%;     
+width:10%;     
 transition:1s;
+margin-top:5%;
+margin-left:3%;
+left:-20%;     
 }
 #sidebar:hover{
     -webkit-transform: scale(1.5);
   -ms-transform: scale(1.5);
   transform: scale(1.5);    
 }
-#sidebar-toggler:checked+#sidebar{
-  left:40%;
-   top:10%; 
-}
+
 #sidebar ul li{
 list-style:none;
 margin-top:1%;
-margin-left:35%;     
-}
-label h2{
-cursor:pointer;
-width:10%;
-height:20%;
-background:red;
-border-radius:10px;     
+margin-right:30%;      
 }
 
+.b1{
+background-image:url(./images/aroow.png);
+width:40px;
+height:65px;     	
+}
 .button{
 background:yellow;
-font-size:130%;     
+font-size:100%;
+width:120%;
+height:100%;      
 }
 /*form*/
 .main {
 	position: absolute;
 	height:100%;
-	width:100%;
+	width:150%;
 	top:0;
 	left:0;
 	display:none;
